respon.css
body{
    /* margin: 0px 100px; */
    font-family: "Sora", sans-serif;
    background-color: black;
    color: white;
}
h1{
    background: -webkit-linear-gradient(#7b48e1, #f6f2fe);
    background: linear-gradient(to right, #7b48e1, #f6f2fe);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
span{
    background: -webkit-linear-gradient(#7b48e1, #f6f2fe);
    background: linear-gradient(to right, #7b48e1, #f6f2fe);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.navigation{
  
    width:100%;
    background-color:#3a1e70 ;
    display: flex;
    justify-content: space-around;
    align-items: center;
    font-size: 20px;
    position: fixed;
    z-index: 1;
    height: 8%;
    top: 0px;
}
.items{
    display: flex;
    gap:2rem;
    align-items: center;
}
nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
  }
  
  nav ul li {
    margin-right: 20px;
  }
  
  nav ul li a {
    text-decoration: none;
    color: white;
    font-size: 18px;
    position: relative;
    padding: 5px 0;
  }
  
  nav ul li a::before {
    content: "";
    position: absolute;
    width: 0;
    height: 2px;
    bottom: 0;
    left: 0;
    background: linear-gradient(45deg, #7b48e1, #3a1e70);
    transition: width 0.3s ease-in-out;
  }
  
  nav ul li a:hover::before {
    width: 100%;
  }

.logo{
    height: fit-content;
    width: fit-content;
    display: flex;
    gap: 1rem;
    align-items: center;
}
.logo img{
        height: 27px;
    border-radius: 13px;
}
.logo a{
    text-decoration: none;
    color: white;
}
.logo a:hover{
    color: #7b48e1;
}
.items{
    display: flex;
    gap: 2rem;
    list-style: none;
}
.items li a{
    text-decoration: none;
}
.hamburger-menu{
    display: none;
}
.phone-items{
    width: 114px;
    position: fixed;
    background-color:#3a1e70 ;
    margin-left: 57%;
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    font-size: 20px;
    border-radius: 13px;
    top: 19px;
    height: fit-content;
    padding: 23px;
    z-index: 1;
    opacity: 73%;
  }
.phone-items li{
    list-style: none;
}
.phone-items li a{
    text-decoration: none;
    color: white;
    font-weight: 700;
}
.hero-container{
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 100px 0px;
    
}
/* .hero-container img{
    height:300px;
} */
.profile>img{
    height: 492px;
    width: 419px;
    border: 1px solid #7b48e1;
    border-radius: 35px;
    /* transform: rotate(5deg); */
    transition: 0.3s ease-in;
}
.profile>img:hover{
    border: 2px solid #7b48e1;
    /* transform: rotate(-4deg); */
}
.social_links{
    display: flex;
    gap: 2rem;
}
.download-btn{
    color: white;
    height: 50px;
    width: 194px;
    border: 1px solid #834df0;
    border-radius: 28px;
    background-color: black;
   
}
.download-btn:hover{
    background-color:#834df0 ;
}
.social-icons{
    height: 41px;
    width: 41px;
    border-radius: 50%;
    border:1px solid #834df0;
    display: flex;
    align-items: center;
    justify-content: center;
    transform: 1.5s ease-in;
}
.social-icons:hover{
    background-color: #7d4ae6;
    transform: scale(1.1);
}
.social-icons i::before{
    height: 30px;
    width: 30px;
    color: #fff;text-align: center;
   
}
.skills-container{
    height: 100%;
    width: 100%;
    /* background-color: rebeccapurple; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 15px;
    box-sizing: border-box;
    gap: 1rem;
    padding: 100px 0px;
}
.skill-body{
    display: flex;
    gap: 1rem;
    flex-wrap: wrap;
}
.skill-card{
    background-color: #0f0715;
    height: 150px;
    width: 150px;
    border-radius: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 10px;
    -webkit-filter: grayscale(90%);
}
.skill-card:hover{
    -webkit-filter: grayscale(0%);
    background-color: #3a1e70;

}
.skill-card i{
    font-size: 80px;
}
.Education-Experience{
    /* background-color: bisque; */
    height: 100%;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 5rem;
    padding: 100px 0px;
}
.Edu, .Exp{
    display: flex;
    flex-direction: column;
    gap: 3rem;
}
.card{
    background: linear-gradient(45deg, #7b48e1, #3a1e70);
    border-radius: 10px;
    padding: 13px;
    height: 200px;
    width: 460px;
    box-sizing: border-box;
}
.project-section{
    height: 100%;
    width: 100%;
    /* background-color: red; */
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}
.project-body{
    display: flex;
    gap: 2rem;
    flex-wrap: wrap;
    justify-content: center;
}
.project-img-container{
    position: relative;
}
.project-img-container img{
    height: 500px;
    width: 585px;
}
.project-content{
    width: 440px;
    background: linear-gradient(45deg, #7b48e1, #3a1e70);
    padding: 15px;
    border-radius: 20px;
    height: 75px;
    margin: 0px 17px;
    position: absolute;
    bottom: 30px;
}
.contact-me-container{
    height: 100%;
    width: 100%;
    /* background-color: darkolivegreen; */
    display: flex;
    justify-content: center;
    padding: 119px 0px;
}
.contact-me-section{
    display: flex;
    gap: 1rem;
    padding: 25px;
}
.description{
   
    width: 321px;
}
.icons{
    /* background-color: yellow; */
    margin-top: 13px;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    
}
.icondiv{
    background: linear-gradient(45deg, #7b48e1, #3a1e70);
    border-radius: 50%;
    height: 50px;
    width: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 21px;
}
@media (max-width:1080px){
    body{
        padding: 0px 15px;
    }
    .navigation{
        background-color:#3a1e70 ;  
    }
    .items{
        display: none;
    }
    .hamburger-menu{
        display: block;
    }
    .phone-items{
        top: 4px;
        margin-left: 68%;
    }
    .hero-container{
        /* flex-direction: column-reverse; */
        align-items: center;
    }
    .profile img{
        height: 450px;
        width: 409px;
    }
    .skill-body{
        gap: 4rem;
    }
    .Education-Experience{
        gap: 2rem;
        justify-content: initial;
        flex-wrap: nowrap;
        justify-content: center;

    }
    .card{
        height: 225px;
        width: 398px;
    }
}

@media (max-width:812px){
    body{
        margin: initial;
    }
    .navigation{
        background-color:#3a1e70 ;
    }
    .left-container{
        width: 100%;
    }
    .left-container h1,h2,p{
        padding: 10px;
    }
    .logo a{
        font-size: 15px;

    }
    .phone-items{
        top: 10px;
        margin-left: 64%;
    }
    .hero-container{
        padding: 55px 0px;
        flex-direction: column-reverse;
    }
    .profile img{
        height: 426px;
        width: 376px;
    }
    .social_links{
        gap: 1rem;
    }
    .skill-body{
        gap: 2rem;
        padding: 0px 9px;
    }
    .skill-card{
        
        padding-top: 29px;
    }
    .card{
        height: 253px;
        width: 371px;
    }
    .Education-Experience{
        flex-wrap: wrap;
    }
    .project-img-container img{
        height: 350px;
        width: 350px;
    }
    .project-content{
        width: 318px;
        padding: initial;
        bottom: 16px;
        height: fit-content;
    }
    .contact-me-container{
        padding: 0px 30px;
    }
}

